fixes chat on safari & added spectator ui integration.

--- a/src/routes/Lobby/Game/Chat/index.module.scss
+++ b/src/routes/Lobby/Game/Chat/index.module.scss
@@ -18,7 +18,7 @@
 
     & h2 {
       flex: 0 1 auto;
-      position: absolute;             /* new */
+      position: absolute;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -31,9 +31,13 @@
 
     & .ChatBox {
       flex-grow: 1;
+      display: flex;
+      flex-direction: column;
 
       .Messages {
+        flex-grow: 1;
         text-align: left;
+        height: inherit;
 
         & .Message {
           padding: 0.3em 0.5em;
