--- a/src/routes/Lobby/Game/index.module.scss
+++ b/src/routes/Lobby/Game/index.module.scss
@@ -12,7 +12,7 @@
   column-gap: 8px;
   row-gap: 4px;
   grid-template-columns: 1fr 10fr 1fr;
-  grid-template-rows: 72px 1fr 8fr 40px;
+  grid-template-rows: 72px 1fr 8fr 1fr;
 }
 
 .GameHeader {
